--- a/pom.xml
+++ b/pom.xml
@@ -273,8 +273,7 @@
                             <goal>compile</goal>
                         </goals>
                         <configuration>
-                            <source>1.8</source>
-                            <target>1.8</target>
+                            <release>8</release>
                         </configuration>
                     </execution>
                     <execution>
