--- a/pom.xml
+++ b/pom.xml
@@ -41,7 +41,7 @@
 
     <groupId>org.owasp.encoder</groupId>
     <artifactId>encoder-parent</artifactId>
-    <version>1.3.1</version>
+    <version>1.4.0</version>
     <packaging>pom</packaging>
 
     <name>OWASP Java Encoder Project</name>
@@ -92,15 +92,6 @@
             <url>http://owasp.github.io/owasp-java-encoder</url>
         </site>
     </distributionManagement>
-    <mailingLists>
-        <mailingList>
-            <name>OWASP Java Encoder Issues at GitHub</name>
-            <subscribe>https://github.com/OWASP/owasp-java-encoder/issues</subscribe>
-            <unsubscribe>https://github.com/OWASP/owasp-java-encoder/issues</unsubscribe>
-            <post>https://github.com/OWASP/owasp-java-encoder/issues</post>
-            <archive>https://github.com/OWASP/owasp-java-encoder/issues</archive>
-        </mailingList>
-    </mailingLists>
 
     <issueManagement>
         <system>github</system>
@@ -259,6 +250,11 @@
                     <artifactId>findbugs-maven-plugin</artifactId>
                     <version>3.0.4</version>
                 </plugin>
+                <plugin>
+                    <groupId>org.sonatype.central</groupId>
+                    <artifactId>central-publishing-maven-plugin</artifactId>
+                    <version>0.9.0</version>
+                </plugin>
             </plugins>
         </pluginManagement>
 
@@ -383,6 +379,15 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-site-plugin</artifactId>
+            </plugin>
+            <plugin>
+                <groupId>org.sonatype.central</groupId>
+                <artifactId>central-publishing-maven-plugin</artifactId>
+                <extensions>true</extensions>
+                <configuration>
+                    <publishingServerId>central</publishingServerId>
+                    <autoPublish>false</autoPublish>
+                </configuration>
             </plugin>
         </plugins>
     </build>
